changed for share

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
   <uses-permission android:name="android.permission.READ_CALENDAR" />
   <uses-permission android:name="android.permission.WRITE_CALENDAR" />
   <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="com.company.app.fileprovider.READ"/>
+
 
   <meta-data
       android:name="android.webkit.WebView.MetricsOptOut"
@@ -81,11 +83,13 @@
         android:name="Settings"
         android:label="@string/settings" />
 
+
     <provider
         android:name="android.support.v4.content.FileProvider"
         android:authorities="org.dharshini.diary.fileprovider"
         android:exported="false"
-        android:grantUriPermissions="true">
+        android:grantUriPermissions="true"
+        android:readPermission="com.company.app.fileprovider.READ">
       <meta-data
           android:name="android.support.FILE_PROVIDER_PATHS"
           android:resource="@xml/filepaths" />
